--- a/src/pref-achievements.css
+++ b/src/pref-achievements.css
@@ -95,13 +95,17 @@ td.achiev-prog {
 	text-align: center;
 }
 
-td.achiev-note {
+.achiev-note {
 	padding: 0 0 0 2px !important;
 	font-size: x-small;
 	color: #666;
 }
 
 @media screen and (max-width: 768px) {
+	td.achiev-name {
+		font-size: 100%;
+		padding: 4px 2px 2px 0 !important;
+	}
 	td.achiev-image {
 		min-width: 10px;
 		width: 10px;
