--- a/src/pref-achievements.css
+++ b/src/pref-achievements.css
@@ -1,136 +1,141 @@
 @charset "utf-8";
 
-#mw-htmlform-achievtitle .mw-input {
+@media screen and (min-width: 769px) {
+  #mw-input-wpachievtitle {
     -webkit-column-count: 2;
     -moz-column-count: 2;
     column-count: 2;
+  }
 }
 
-table.achiev-item {
-	background-color: #ffffff;
-	border: 1px solid #e8e8e8;
-	color: #252525;
-	height: 120px;
-	margin: 6px 0;
+@media screen and (min-width: 1025px) {
+  #mw-input-wpachievtitle {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+  }
 }
 
-td.achiev-image {
-	min-width: 100px;
-	width: 100px;
-	padding: 0 !important;
-	text-align: center;
+.achiev-item {
+  display: flex;
+  align-items: center;
+  font-size: 0.875rem;
+  min-height: 9em;
+  margin: 0.5em 0;
+  background-color: #ffffff;
+  border: 1px solid #e8e8e8;
+  color: #252525;
 }
 
-td.achiev-image img {
-	height: 60px;
-	width: 60px;
+.achiev-image {
+  flex: 0 0 7em;
+  text-align: center;
 }
 
-td.achiev-name {
-	width: 100%;
-	font-size: 120%;
-	padding: 10px 4px 2px 0 !important;
+.achiev-image img {
+  height: auto;
+  width: 100%;
+  max-width: 60px;
 }
 
-td.achiev-stage {
-	min-width: 160px;
-	width: 160px;
-	padding: 0 !important;
-	text-align: center;
+.achiev-body {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
-.achiev-block {
-	display: inline-block;
-	width: 32px;
-	margin: 2%;
-	height: 45px;
-	background-color: #a5a5a5;
-	text-align: center;
-	vertical-align: middle;
-	line-height: 45px;
-	font-weight: bold;
-	font-size: 16px;
-	color: #f2f2f2;
+.achiev-name {
+  font-size: 1.2em;
+  margin-bottom: 0.2em;
 }
 
-.achiev-block-c {
-	background-color: #61c72f;
-}
-.achiev-block-a {
-	background-color: #ff9e38;
-}
-
-td.achiev-desc {
-	padding: 0 0 0 1em !important;
-	vertical-align: top;
-	font-size: 90%;
-	height: 100%;
+.achiev-desc {
+  padding: 0 0 0 1em;
+  margin: 0 0.2em;
+  line-height: 1.5;
+  min-height: 1.5em;
 }
 
-td.achiev-prog {
-	position: relative;
-	padding: 0 !important;
+.achiev-prog {
+  position: relative;
+  margin: 0.2em 0;
+  width: 300px;
 }
 
 .achiev-bar {
-	width: 100%;
-	max-width: 300px;
-	height: 8px;
-	text-align: left;
-	margin: 0px 4px 4px 4px;
-	overflow: hidden;
-	background-color: #a5a5a5;
+  width: 100%;
+  height: 1em;
+  overflow: hidden;
+  background-color: #a5a5a5;
 }
+
 .achiev-barfill {
-	height: 100%;
-	display: inline-block;
-	vertical-align: top;
-	background-color: #ff9e38;
+  height: 100%;
+  background-color: #ff9e38;
 }
+
 .achiev-barfill-c {
-	background-color: #61c72f;
+  background-color: #61c72f;
 }
+
 .achiev-bartext {
-	position: absolute;
-	top: -0.5em;
-	left: 0;
-	width: 100%;
-	max-width: 300px;
-	height: 100%;
-	font-size: 12px;
-	text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 0.857em;
+  text-align: center;
+  white-space: nowrap;
 }
 
 .achiev-note {
-	padding: 0 0 0 2px !important;
-	font-size: x-small;
-	color: #666;
+  margin-top: 0.5em;
+  font-size: 0.75em;
+  color: #666;
+}
+
+.achiev-stage {
+  flex: 0 1 160px;
+  padding: 0.5em 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.achiev-block {
+  width: 32px;
+  margin: 0.2em;
+  height: 45px;
+  background-color: #a5a5a5;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 45px;
+  font-weight: bold;
+  font-size: 16px;
+  color: #f2f2f2;
+}
+
+.achiev-block-c {
+  background-color: #61c72f;
+}
+.achiev-block-a {
+  background-color: #ff9e38;
 }
 
 @media screen and (max-width: 768px) {
-	#mw-htmlform-achievtitle .mw-input {
-		-webkit-column-count: 1;
-		-moz-column-count: 1;
-		column-count: 1;
-	}
+  .achiev-image {
+    flex-basis: 1em;
+  }
 
-	td.achiev-name {
-		font-size: 100%;
-		padding: 4px 2px 2px 0 !important;
-	}
-	td.achiev-image {
-		min-width: 10px;
-		width: 10px;
-	}
-	td.achiev-image img {
-		display: none;
-	}
-	td.achiev-stage {
-		min-width: 140px;
-		width: 140px;
-	}
+  .achiev-image img {
+    display: none;
+  }
 
-	.achiev-block {
-		width: 28px;
-	}
+  .achiev-stage {
+    flex-basis: 140px;
+  }
+
+  .achiev-block {
+    width: 28px;
+  }
 }
